Fix z-index ordering for select boxes

--- a/src/components/FilterChartOptions/@FilterOptions.scss
+++ b/src/components/FilterChartOptions/@FilterOptions.scss
@@ -16,3 +16,11 @@
   background: transparent;
   border: none;
 }
+
+.FilterChartOptions__select {
+  z-index: 10;
+}
+
+.FilterChartOptions__root .Select {
+  z-index: 9;
+}
